--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
    <body>
       <label for="level">Choose a level:</label>
       <select name="level" id="level">
-         <option value="50">50</option>
-         <option value="80">80</option>
-         <option value="100">100</option>
+         <option value="50">Level 1</option>
+         <option value="80">Level 2</option>
+         <option value="100">Level 3</option>
       </select>
-      <button onClick="displayBoard()">Select Level</button>
+      <button onClick="initializeGame()">Select Level</button>
       <div id="pcMoves"></div>
       <div id="userMoves"></div>
-      <div id="points">0</div>
+      <div id="points"></div>
       <div id="board">
       </div>
 
