--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          </div>
 
       </main>
-      <div id="points">Scores: 0</div>
+      <div id="points"></div>
 
 
       <script src="script.js" charset="utf-8"></script>
