--- a/index.html
+++ b/index.html
@@ -23,19 +23,17 @@
                </select>
                <button id="play-btn" onClick="initializeGame()">Play</button>
             </div>
-
-
          </div>
-
          <div class="board-container">
             <div id="board">
+            </div>
+            <div id="message-container">
+
             </div>
          </div>
 
       </main>
       <div id="points"></div>
-
-
       <script src="script.js" charset="utf-8"></script>
    </body>
 </html>
